# touch-struct

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tests/: __init__.py  test_touch_struct.py
touch_struct/: __init__.py  cli.py  core.py
